fix: footer elements not centered (#1076)
* fix: footer elements not centered

* fix: updated footer

---------

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -340,7 +340,7 @@
   .join-us-list {
     position: relative;
     top: -10px;
-    margin-left: 70px;
+    /* margin-left: 70px; */
   }
   .join h1 {
     margin-left: 60px;
